# aegis

./: .dockerignore  .env.example  .gitignore  .ignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  aegis.toml  dev.sh  docker-compose.test.yml  opencode.json  package.json
.github/workflows/: ci.yml  publish-schema.yml  publish-sdk.yml  publish-server.yml
.strata/: strata.db
config/: v1.json
crates/aegis-app/: Cargo.toml
crates/aegis-app/src/: app.rs  crypto.rs  deps.rs  error.rs  lib.rs  policy.rs  session.rs
crates/aegis-app/src/convert/: core_to_output.rs  input_to_core.rs  mod.rs
crates/aegis-app/src/dto/: context.rs  input.rs  mod.rs  output.rs
crates/aegis-app/src/jobs/: mod.rs  payload.rs
crates/aegis-app/src/ports/: cache.rs  clock.rs  email.rs  hasher.rs  id.rs  mod.rs  outbox.rs  repo.rs  tokens.rs  webauthn.rs  webhook.rs
crates/aegis-app/src/usecase/: guest.rs  internal.rs  login.rs  logout.rs  me.rs  mfa.rs  mod.rs  passkey.rs  password.rs  session.rs  signup.rs  verification.rs
crates/aegis-app/tests/: auth_lifecycle.rs  email_password.rs  guest_lifecycle.rs  mfa_session.rs
crates/aegis-app/tests/common/: mod.rs
crates/aegis-cache/: Cargo.toml
crates/aegis-cache/src/: error.rs  lib.rs  memory.rs  redis_impl.rs
crates/aegis-config/: Cargo.toml
crates/aegis-config/examples/: gen-schema.rs
crates/aegis-config/src/: api.rs  compliance.rs  credentials.rs  crypto.rs  database.rs  dump.rs  email.rs  enums.rs  error.rs  lib.rs  redis.rs  ref_or.rs  root.rs  schema.rs  secret.rs  server.rs  session.rs  tests.rs  webhooks.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: ids.rs  lib.rs
crates/aegis-core/src/identity/: audit.rs  guest.rs  identity_kind.rs  metadata.rs  mod.rs  password.rs  permission.rs  role.rs  service.rs  session.rs  status.rs  token.rs  user.rs
crates/aegis-core/src/identity/credential/: mod.rs  passkey.rs  password.rs  recovery_code.rs  totp.rs
crates/aegis-core/src/traits/: anonymize.rs  mod.rs
crates/aegis-db/: Cargo.toml
crates/aegis-db/src/: error.rs  lib.rs  outbox.rs
crates/aegis-db/src/convert/: audit.rs  credential.rs  identity.rs  mod.rs  role.rs  tests.rs  token.rs
crates/aegis-db/src/repo/: audit.rs  credential.rs  guest.rs  mod.rs  outbox.rs  pg_repos.rs  role.rs  session.rs  token.rs  user.rs
crates/aegis-db/src/row/: audit.rs  credential.rs  identity.rs  mod.rs  role.rs  token.rs
crates/aegis-db/tests/: repo_integration.rs
crates/aegis-http/: Cargo.toml
crates/aegis-http/src/: auth.rs  context.rs  cookies.rs  error.rs  lib.rs  mapping.rs  middleware.rs  router.rs  state.rs
crates/aegis-http/src/handlers/: auth.rs  email_password.rs  guest.rs  internal.rs  mfa.rs  mod.rs  passkey.rs  session.rs  signup.rs
crates/aegis-http/tests/: envelope_harness.rs
crates/aegis-infra/: Cargo.toml
crates/aegis-infra/src/adapters/: argon2.rs  cache.rs  clock.rs  email.rs  id.rs  jwt.rs  mod.rs  outbox.rs  token.rs  webauthn.rs  webhook.rs
crates/aegis-migrate/: Cargo.toml
crates/aegis-migrate/src/: error.rs  lib.rs  runner.rs
crates/aegis-types/: Cargo.toml
crates/aegis-types/src/: common.rs  error.rs  lib.rs
crates/aegis-types/src/internal/: request.rs  response.rs
crates/aegis-types/src/request/: auth.rs  credential.rs  identity.rs  mfa.rs  mod.rs  password.rs  session.rs
crates/aegis-types/src/response/: auth.rs  credential.rs  identity.rs  mod.rs  role.rs  session.rs
docs/rfc/: 0001.md
infra/dev/: compose.yml
migrations/: 20260421000000_initial_schema.up.sql  20260421000001_outbox.up.sql
scripts/: gen-schema.sh  test-all.sh  test-env-down.sh  test-env-up.sh
sdk/: package.json  tsconfig.base.json
sdk/test/: support.ts
secrets/: jwt_private.pem  jwt_public.pem
