[package]
name = "aegis-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-core.workspace = true
aegis-config.workspace = true
thiserror.workspace = true
async-trait.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
