[package]
name = "aegis-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-core.workspace = true
aegis-config.workspace = true
thiserror.workspace = true
async-trait.workspace = true
time.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
hex.workspace = true
rand.workspace = true
sha2.workspace = true
totp-rs.workspace = true
serde_json.workspace = true
webauthn-rs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
