[package]
name = "aegis-config"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
