[package]
name = "aegis-db"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-core.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde"] }
thiserror.workspace = true
