[package]
name = "aegis-db"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-core.workspace = true
aegis-app.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde"] }
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
dotenvy.workspace = true
aegis-migrate.workspace = true
