[package]
name = "aegis-http"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-app.workspace = true
aegis-types.workspace = true
aegis-core.workspace = true
aegis-config.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
