[package]
name = "aegis-http"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-app.workspace = true
aegis-types.workspace = true
aegis-core.workspace = true
aegis-config.workspace = true
aegis-infra.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
ipnet.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.5"
