[package]
name = "aegis-infra"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aegis-app.workspace = true
aegis-cache = { workspace = true, features = ["redis"] }
aegis-config.workspace = true
aegis-core.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
lettre.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
webauthn-rs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
